syntax = "proto3";

package post;

import "user.proto";

option go_package = "github.com/anggasct/post-service/pb/post";

service PostService {
  rpc GetPost(GetPostRequest) returns (GetPostResponse) {}
}

message Post {
  int64 id = 1;
  int64 user_id = 2;
  string content = 3;
  user.User user = 4;
}

message GetPostRequest {
  int64 id = 1;
}

message GetPostResponse {
  Post post = 1;
}
