syntax = "proto3";

package user;


option go_package = "github.com/anggasct/post-service/pb/user";

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
}

message User {
  int64 id = 1;
  string name = 2;
}

message GetUserRequest {
  int64 id = 1;
}

message GetUserResponse {
  User user = 1;
}
